# GetIP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  getip_utils.c  getip_utils.h  install.sh  license-checker.sh  main.c  sock_utils.c  sock_utils.h
include/: getip_apis.h  getip_args.h  getip_errors.h  getip_errs.h  getip_request.h  getip_usage.h.in
src/: getip_apis.c  getip_args.c  getip_errors.c  getip_errs.c  getip_main.c  getip_request.c  getip_usage.c  main.c
